1.2.1 (Unreleased):
- TBD

1.2.0:
- Added additional_entries parameter to add_function for specifying multiple
  entry points to functions

1.1.0:
- Added byte_order to create_test_module and defaulted to inferring it from
  the module's ISA

1.0.0:
- Initial version